# larpfetch

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION.md  Justfile  LICENSE  PRD.md  PROMPT.md  README.md  ROADMAP.md  main.py  pyproject.toml
docs/: CONFIG.md  USAGE.md  architecture.md
scripts/: release.sh
src/larpfetch/: __init__.py  __main__.py  cli.py  config.py  easter_eggs.py  logos.py  models.py  profiles.py  renderer.py  resolver.py
src/larpfetch/collectors/: common.py  linux.py  macos.py  windows.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_easter_eggs.py  test_integration.py  test_logos.py  test_models.py  test_profiles.py  test_renderer.py  test_resolver.py
