[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "larpfetch"
version = "1.5.0"
description = "LARP as any distro, hardware, or machine you want. Because reality is optional until you pass --real-shit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["psutil>=5.9"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
larpfetch = "larpfetch.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/larpfetch/logos.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
